# tide

./: Cargo.toml  SETUP_TOKEN.md  example-full-config.toml  readme.md  tide.rb
.github/workflows/: README.md  ci.yml  release.yml
homebrew/: README.md  tide.rb
src/: cli.rs  config.rs  error.rs  executor.rs  keychain.rs  logger.rs  main.rs  main.rs.backup  notifications.rs  ui.rs
