[package]
name = "tide"
version = "1.3.1"
edition = "2024"
authors = ["Markus Sommer"]
description = "🌊 Tide - Refresh your system with the update wave"
license = "MIT"
repository = "https://github.com/BreathCodeFlow/tide"
keywords = ["macos", "update", "maintenance", "automation", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
thiserror = "2.0.17"
dirs = "6.0.0"
which = "8.0.0"
shellexpand = "3.1.1"
colored = "3.0.0"
indicatif = "0.18.0"
dialoguer = "0.12.0"
crossterm = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["blocking"] }
notify-rust = "4.11.7"
